--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">FsFirstTemplate</string>
+    <string name="str_ok">확인</string>
+    <string name="str_cancel">취소</string>
+    <string name="text_error_api" translatable="false">통신중 예기치 않는 오류가 발생되었습니다.</string>
+    <string name="dialog_network_error">네트워크 오류입니다.</string>
 </resources>
